deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-plays-pokemon
  namespace: feavy
  labels:
    k8s-app: discord-plays-pokemon
spec:
  selector:
    matchLabels:
      k8s-app: discord-plays-pokemon
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        k8s-app: discord-plays-pokemon
        name: discord-plays-pokemon
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/q/metrics"
    spec:
      containers:
        - name: discord-plays-pokemon
          image: ${DOCKER_IMAGE}
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /root/.vba
              name: vba-data
            - mountPath: /etc/credentials
              name: credentials
          imagePullPolicy: Always
      volumes:
        - name: vba-data
          hostPath:
            path: /discord-plays-pokemon/data
        - name: credentials
          secret:
            secretName: service-account-secret
            items:
              - key: credentials.json
                path: credentials.json
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        kubernetes.io/hostname: 'oracle-marseille'
---
kind: Service
apiVersion: v1
metadata:
  name: discord-plays-pokemon-service
  namespace: feavy
spec:
  selector:
    k8s-app: discord-plays-pokemon
  ports:
    - protocol: TCP
      port: 8080
      name: web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: discord-plays-pokemon-route
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tpkmnnor.com`)
      services:
        - name: discord-plays-pokemon-service
          namespace: feavy
          port: 8080
  tls:
    secretName: tpkmnnor-tls
